# qatq

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  dist-workspace.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  coverage-supply-chain.yml  fuzz.yml  kv-stress.yml  live-vram-burnin.yml  publish-crate.yml  release.yml
adapters/llama-cpp/: README.md  live-vram-matrix.local.example.json  live-vram-native-breadth.local.example.json  live-vram-native-dtype.local.example.json  live-vram-native-layer-memory-breadth.local.example.json  live-vram-native-layer-memory.local.example.json  live-vram-native-long-context-latency.local.example.json  live-vram-native-page-size.local.example.json  live-vram-native-phi-page-size.local.example.json  live-vram-native-sustained.local.example.json  live-vram-server-baseline.local.example.json  live-vram-server-extended.local.example.json  live-vram-server-family-phi-policy-burnin-notrace.local.example.json  live-vram-server-family-policy-notrace.local.example.json  live-vram-server-family-policy-soak-notrace.local.example.json  live-vram-server-layer-policy-notrace.local.example.json  live-vram-server-layer-sweep-notrace.local.example.json  live-vram-server-mixed-model-prompts.local.example.json  live-vram-server-mixed-model-soak.local.example.json  live-vram-server-mixed-prompts.local.example.json  live-vram-server-perf-notrace.local.example.json  live-vram-server-phi-layer-sweep.local.example.json  live-vram-server-phi-policy.local.example.json  live-vram-server-queue-depth.local.example.json  live-vram-server-strict.local.example.json  qatq-kv-export-7992aa7c8.patch
docs/: API_CLI_FREEZE.md  ARCHITECTURE.md  BENCHMARKS.md  BENCHMARK_GATE.md  BENCHMARK_GATE_THROUGHPUT.md  BRAND.md  CODEX_HANDOFF.md  CREDITS.md  EXTERNAL_RUNTIME_EVIDENCE.md  FIXTURES.md  FIXTURE_AUDIT.md  LIVE_VRAM_REDUCTION.md  LLAMA_CPP_KV_CAPTURE.md  LLAMA_CPP_KV_COMPRESSION_REPORT.md  LLAMA_CPP_KV_MATRIX.md  LLAMA_CPP_LIVE_VRAM_GPU_EVIDENCE.md  PAPER_NOTES.md  PAPER_REFRESH_NOTES.md  PAPER_TABLES.md  PERMEANTOS_AWS_MIGRATION_INTEGRATION.md  PERMEANTOS_HANDOFF.md  PRODUCTION_READINESS.md  PUBLIC_BENCHMARKS.md  PUBLIC_BENCHMARK_GATE.md  PUBLIC_COMPARATIVE_BASELINES.md  PUBLIC_COMPARATIVE_TABLES.md  PUBLIC_COMPETITIVE_COMPRESSION_GATE.md  PUBLIC_COMPRESSION_SUMMARY.md  PUBLIC_FIXTURE_AUDIT.md  PUBLIC_PAPER_TABLES.md  PUBLIC_QUALITY_EXPERIMENTS.md  PUBLIC_RELEASE_0_1_2_EVIDENCE.md  PUBLIC_RELEASE_0_1_3_EVIDENCE.md  PUBLIC_RELEASE_0_1_4_EVIDENCE.md  PUBLIC_RELEASE_0_1_5_EVIDENCE.md  PUBLIC_TASK_QUALITY_EXPERIMENTS.md  RELEASE_CHECKLIST.md  ROADMAP.md  RUNTIME_ADAPTERS.md  RUNTIME_TASK_QUALITY_EXPERIMENTS.md  (+3 more)
examples/: production_chunk.rs
fixtures/: permeantos.manifest  public.manifest
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_payload.rs  live_vram_attention.rs  live_vram_lifecycle.rs  live_vram_manifest.rs  live_vram_page.rs  phase2_roundtrip.rs  qatq_exact_roundtrip.rs
handoff/permeantos/: LIVE_DECISION_PATH_RESULTS.md  NEXT_RUN_INSTRUCTIONS.md  PERMEANTOS_HANDOFF.md  RUN_NOTES.md  capture-metadata.json  manifest-add-commands.txt
handoff/permeantos/runs/20260621-expanded-real-mlx/: BENCHMARKS.md  BENCHMARK_GATE.md  BENCHMARK_GATE_THROUGHPUT.md  FIXTURE_AUDIT.md  PAPER_TABLES.md  RUN_NOTES.md  permeantos.manifest
handoff/permeantos/runs/20260621-live-decision-path/: BENCHMARKS.md  BENCHMARK_GATE.md  BENCHMARK_GATE_THROUGHPUT.md  PAPER_TABLES.md  RUN_NOTES.md  capture-metadata.json
scripts/: llama_cpp_adapter_bootstrap.py  llama_cpp_attention_fixture_gate.py  llama_cpp_kv_matrix.py  llama_cpp_live_vram_abort_probe.py  llama_cpp_live_vram_adapter_audit.py  llama_cpp_live_vram_evidence.py  llama_cpp_live_vram_hardware_counters.py  llama_cpp_live_vram_matrix.py  llama_cpp_live_vram_page_size_sweep.py  llama_cpp_live_vram_parallel_stress.py  llama_cpp_live_vram_server_burnin.py  llama_cpp_live_vram_server_cancel_matrix.py  llama_cpp_live_vram_server_cancel_probe.py  llama_cpp_runtime_kv.py  mlx_live_vram_streaming_attention.py  ollama_task_quality.py
src/: lib.rs  main.rs
tests/: bench.rs  cli.rs  kv_stress.rs  scripts.rs
