[package]
name = "qatq-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
qatq = { path = ".." }

[[bin]]
name = "decode_payload"
path = "fuzz_targets/decode_payload.rs"
test = false
doc = false
bench = false

[[bin]]
name = "qatq_exact_roundtrip"
path = "fuzz_targets/qatq_exact_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "live_vram_page"
path = "fuzz_targets/live_vram_page.rs"
test = false
doc = false
bench = false

[[bin]]
name = "live_vram_manifest"
path = "fuzz_targets/live_vram_manifest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "live_vram_lifecycle"
path = "fuzz_targets/live_vram_lifecycle.rs"
test = false
doc = false
bench = false

[[bin]]
name = "live_vram_attention"
path = "fuzz_targets/live_vram_attention.rs"
test = false
doc = false
bench = false
